added cards section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       </div>
     </div>
     <section class="w-4/5 mx-auto mb-24  ">
-      <div class=" w-1/2 mx-auto">
+      <div class="lg:w-1/2 mx-auto w-3/4">
       <img class=" text-center w-full" src="assets/banner.png" alt="">
       
       </div>
@@ -334,13 +334,119 @@ modern sophistication, featuring weathered wood, sleek metal accents.
        </div>
 </div>
 </div>
+</section>
 
 
+<section class="w-4/5 mx-auto my-10 border-red-400">
+<div id="text-area" class="">
+  <div id="btn" class="text-center " >
+    <button class="">
+      <div class=" flex items-center justify-center gap-1 bg-btn-greeen px-3 rounded-3xl py-2 " > 
+        <span class="font-semibold  ">Explore our Latest works</span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-7  
+         rounded-full bg-btn-green text-black ">
+          <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 0 0 1.06 0l7.22-7.22v5.69a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-.75-.75h-7.5a.75.75 0 0 0 0 1.5h5.69l-7.22 7.22a.75.75 0 0 0 0 1.06Z" clip-rule="evenodd" />
+        </svg>
+      </div>
+    </button>
+  </div>
+  <div class="mx-auto text-center w-3/4">
+    <h1 class="font-bold text-3xl my-4">
+      Our Latest Portfolio
+    </h1>
+    <p class=" font-medium ">
+      The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.
+    </p>
+  </div>
+</div>
+  <div id="card-one" class="lg:flex justify-center items-center sm:flex-col" >
+
+ <div class="lg:flex items-center justify-center gap-3">
+      <div class="hero-content flex-col lg:flex-row w-[68%] mx-auto ">
+        <img
+          src=" assets/img1.png"
+          class="max-w-sm rounded-lg  shadow-2xl  sm:mx-auto w-4/5" />
+        <div class="  px-5 lg:w-[100%]">
+          <h1 class="text-xl font-bold">Commercial</h1>
+          <p class="py-3 text-sm">
+            The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .
+          </p>
+          <button class=""> <div class=" flex items-center  gap-1  bg-white rounded-3xl  " > 
+            <span class="font-semibold pr-2.5   ">View Details</span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-7 
+             rounded-full bg-btn-green text-black ">
+              <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 0 0 1.06 0l7.22-7.22v5.69a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-.75-.75h-7.5a.75.75 0 0 0 0 1.5h5.69l-7.22 7.22a.75.75 0 0 0 0 1.06Z" clip-rule="evenodd" />
+            </svg>
+          </div>
+          </button>
+        </div>
+      </div>
+<div id="2222" class="lg:w-[32%] mx-auto sm:w-3/4 ">
+        <img class=" sm:mx-auto sm:w-full " src="assets/img2.png" alt="">
+        
+        </div>
+
+    </div>
+ </div>
+
+
+<div id="card-two" class="lg:flex items-center justify-center my-5">
+
+<div id="11" class=" mt-5 w-4/5 lg:w-1/4 mx-auto lg:flex items-center justify-center">
+<img src="assets/img3.png" class=" w-full " alt="">
+
+</div>
+
+<div id="22" class="">
+<div class="lg:flex my-6 items-center lg:ml-9">
+
+
+  <div id="image" class=" lg:w-[50%] w-3/4  mx-auto">
+    <img
+      src=" assets/img1.png"
+      class="w-full   rounded-lg shadow-2xl  sm:mx-auto" />
+    </div>
+
+
+   
+      <div class=" lg:w-full flex w-4/5 mx-auto  px-4 sm:my-6  justify-center flex-col">
+        <h1 class="text-xl font-bold">Commercial</h1>
+        <p class="py-1 text-sm w-3/4">
+          The barn house captivates with its blend of rustic charm <br>and modern. The barn house captivates with its blend of rustic charm and modern .
+        </p>
+        <button class=""> 
+          <div class=" flex items-center  gap-1  bg-white rounded-3xl  " > 
+          <span class="font-semibold pr-2.5   ">View Details</span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-7 
+           rounded-full bg-btn-green text-black ">
+            <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 0 0 1.06 0l7.22-7.22v5.69a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-.75-.75h-7.5a.75.75 0 0 0 0 1.5h5.69l-7.22 7.22a.75.75 0 0 0 0 1.06Z" clip-rule="evenodd" />
+          </svg>
+        </div>
+        </button>
+      </div>
+     </div>
+
+
+
+  </div>
+  <div id="33" class=" lg:flex items-center justify-center my-6
+  lg:w-1/4 w-3/4 mx-auto ">
+
+    <img class="w-full" src="assets/img5.png" alt="">
+    </div>
+</div>
+
+
+
+</div>
+
+
+
+
+
+
+
+</div>
 
 </section>
-<section>
 
-</section>
 </main>
     <footer class="mx-auto w-full bg-neutral-700 mt-24">
       <div>
