added new inputs section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 clifford: '#da373d',
                 'btn-green': '#ABEF5F',
                 'para': '#494949',
-                'btn-greeen':'#D2FF9F',
+                'btn-greeen':'#E1EED3',
            'gray':'#494949',  
            'card-1':'#E7C1D3',
            'card-2':'#EFDA6E',  
@@ -388,7 +388,7 @@ modern sophistication, featuring weathered wood, sleek metal accents.
  </div>
 
 
-<div id="card-two" class="lg:flex items-center justify-center my-5">
+<div id="card-two" class="lg:flex items-center justify-center my-5 ">
 
 <div id="11" class=" mt-5 w-4/5 lg:w-1/4 mx-auto lg:flex items-center justify-center">
 <img src="assets/img3.png" class=" w-full " alt="">
@@ -401,7 +401,7 @@ modern sophistication, featuring weathered wood, sleek metal accents.
 
   <div id="image" class=" lg:w-[50%] w-3/4  mx-auto">
     <img
-      src=" assets/img1.png"
+      src="assets/img4.png"
       class="w-full   rounded-lg shadow-2xl  sm:mx-auto" />
     </div>
 
@@ -422,18 +422,167 @@ modern sophistication, featuring weathered wood, sleek metal accents.
         </button>
       </div>
      </div>
-
-
-
-  </div>
+</div>
   <div id="33" class=" lg:flex items-center justify-center my-6
   lg:w-1/4 w-3/4 mx-auto ">
 
     <img class="w-full" src="assets/img5.png" alt="">
     </div>
 </div>
+</div>
+</div>
+</section>
+
+<section class=" w-4/5 mx-auto">
+  <div id="text-part" class=" w-4/5 mx-auto">
+    <div id="btn" class="text-center " >
+      <div class="navbar-center">
+      <a class="btn btn-ghost py-2 text-gray font-bold bg-btn-greeen rounded-3xl"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-6 rounded-2xl rotate-45 bg-btn-greeen ">
+          <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 0 0 1.06 0l7.22-7.22v5.69a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-.75-.75h-7.5a.75.75 0 0 0 0 1.5h5.69l-7.22 7.22a.75.75 0 0 0 0 1.06Z" clip-rule="evenodd" />
+        </svg>
+        Rinterio News</a>
+      </div>
+</div>
+ <div id="article" class="text-center my-6">
+      <h1 class=" font-bold text-3xl">
+        Read Our Articles and News
+      </h1>
+      <p class=" text-sm py-2">
+        The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.
+      </p>
+    </div>
+</div>
 
 
+<div id="cards" class="lg:grid grid-cols-3 ">
+
+  <div class="card bg-base-100 lg:w-4/5 shadow-xl w-3/4 mx-auto sm:my-8">
+    <figure>
+      <img
+        src=" assets/article1.png"
+        alt="Shoes" />
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+      <p>The barn house captivates with its blend of rustic charm and modern. </p>
+      <div class="card-actions justify-start">
+        <button class=""> 
+          <div class=" flex items-center  gap-1  bg-white rounded-3xl  " > 
+          <span class="font-semibold pr-2.5   ">Read More</span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-7 
+           rounded-full bg-btn-green text-black ">
+            <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 0 0 1.06 0l7.22-7.22v5.69a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-.75-.75h-7.5a.75.75 0 0 0 0 1.5h5.69l-7.22 7.22a.75.75 0 0 0 0 1.06Z" clip-rule="evenodd" />
+          </svg>
+        </div>
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="card bg-base-100 lg:w-4/5 shadow-xl w-3/4 mx-auto sm:my-8">
+    <figure>
+      <img
+        src="assets/article2.png"
+        alt="Shoes" />
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+      <p> The barn house captivates with its blend of rustic charm and modern. </p>
+      <div class="card-actions justify-strat">
+        <button class=""> 
+          <div class=" flex items-center  gap-1  bg-white rounded-3xl  " > 
+          <span class="font-semibold pr-2.5   ">Read More</span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-7 
+           rounded-full bg-btn-green text-black ">
+            <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 0 0 1.06 0l7.22-7.22v5.69a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-.75-.75h-7.5a.75.75 0 0 0 0 1.5h5.69l-7.22 7.22a.75.75 0 0 0 0 1.06Z" clip-rule="evenodd" />
+          </svg>
+        </div>
+        </button>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="card bg-base-100 lg:w-4/5 shadow-xl w-3/4 mx-auto sm:my-8">
+    <figure>
+      <img
+        src="assets/article3.png"
+        alt="Shoes" />
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+      <p>The barn house captivates with its blend of rustic charm and modern. </p>
+      <div class="card-actions justify-strat">
+        <button class=""> 
+          <div class=" flex items-center  gap-1  bg-white rounded-3xl  " > 
+          <span class="font-semibold pr-2.5   ">Read More</span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-7 
+           rounded-full bg-btn-green text-black ">
+            <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 0 0 1.06 0l7.22-7.22v5.69a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-.75-.75h-7.5a.75.75 0 0 0 0 1.5h5.69l-7.22 7.22a.75.75 0 0 0 0 1.06Z" clip-rule="evenodd" />
+          </svg>
+        </div>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+
+<section class=" min-w-full mx-auto
+">
+<div id="section" class=" w-3/4 mx-auto">
+
+
+
+  <div id="text-part" class=" w-full mx-auto">
+    <div id="btn" class="text-center " >
+      <div class="navbar-center">
+      <a class="btn btn-ghost py-2 text-gray font-bold bg-btn-greeen rounded-3xl"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-6 rounded-2xl rotate-45 bg-btn-greeen ">
+          <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 0 0 1.06 0l7.22-7.22v5.69a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-.75-.75h-7.5a.75.75 0 0 0 0 1.5h5.69l-7.22 7.22a.75.75 0 0 0 0 1.06Z" clip-rule="evenodd" />
+        </svg>
+        Let’s Connect</a>
+      </div>
+</div>
+ <div id="article" class="text-center my-6">
+      <h1 class=" font-bold text-3xl">
+        Let’s Discuss Next Project
+      </h1>
+      <p class=" text-sm py-2 lg:w-3/5 mx-auto">
+        The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.
+      </p>
+    </div>
+</div>
+<div class=" lg:grid grid-cols-2 grid-rows-7 lg:w-4/6 mx-auto gap-6 mt-6">
+<div>
+  <input
+  type="text"
+  placeholder="First Name*"
+  class="input input-bordered w-full sm:mt-4 bg-white rounded-3xl " />
+
+</div>
+<div>
+  <input
+  type="text"
+  placeholder="Last Name*"
+  class="input input-bordered w-full rounded-3xl bg-white sm:mt-6" />
+
+</div>
+<div>
+  <input
+  type="number"
+  placeholder="Phone Number*"
+  class="input input-bordered rounded-3xl w-full bg-white sm:mt-6" />
+
+</div>
+<div>
+  <input
+  type="email"
+  placeholder="Email or Number*"
+  class="input input-bordered  rounded-3xl w-full bg-white sm:mt-6" />
+
+</div>
+<div class="col-span-2 row-span-4">
+  <input
+  type="text"
+  placeholder="Write your message here*"
+  class="input input-bordered rounded-1xl w-full h-full bg-white  sm:mt-6" />
 
 </div>
 
@@ -444,8 +593,13 @@ modern sophistication, featuring weathered wood, sleek metal accents.
 
 
 </div>
+</div>
+
+
 
 </section>
+
+
 
 </main>
     <footer class="mx-auto w-full bg-neutral-700 mt-24">
