--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ modern sophistication, featuring weathered wood, sleek metal accents.
         </div>
       </div>
 <div id="2222" class="lg:w-[32%] mx-auto sm:w-3/4 ">
-        <img class=" sm:mx-auto sm:w-full " src="assets/img2.png" alt="">
+        <img class=" mx-auto sm:w-full " src="assets/img2.png" alt="">
         
         </div>
 
@@ -554,35 +554,35 @@ modern sophistication, featuring weathered wood, sleek metal accents.
   <input
   type="text"
   placeholder="First Name*"
-  class="input input-bordered w-full sm:mt-4 bg-white rounded-3xl " />
+  class="input input-bordered w-full mt-6 bg-white rounded-3xl " />
 
 </div>
 <div>
   <input
   type="text"
   placeholder="Last Name*"
-  class="input input-bordered w-full rounded-3xl bg-white sm:mt-6" />
+  class="input input-bordered w-full rounded-3xl bg-white mt-6" />
 
 </div>
 <div>
   <input
   type="number"
   placeholder="Phone Number*"
-  class="input input-bordered rounded-3xl w-full bg-white sm:mt-6" />
+  class="input input-bordered rounded-3xl w-full bg-white mt-6" />
 
 </div>
 <div>
   <input
   type="email"
   placeholder="Email or Number*"
-  class="input input-bordered  rounded-3xl w-full bg-white sm:mt-6" />
+  class="input input-bordered  rounded-3xl w-full bg-white mt-6" />
 
 </div>
-<div class="col-span-2 row-span-4">
+<div class="col-span-2 row-span-4 sm:mb-6 ">
   <input
   type="text"
   placeholder="Write your message here*"
-  class="input input-bordered rounded-1xl w-full h-full bg-white  sm:mt-6" />
+  class=" input input-bordered rounded-1xl w-full h-full bg-white  mt-6" />
 
 </div>
 
@@ -646,7 +646,7 @@ modern sophistication, featuring weathered wood, sleek metal accents.
 
 
     </footer>
-
+    
 </body>
 </html>
 
